# ai-hvac-design-assistant

./: .env.example  CHANGELOG.md  LICENSE  README-chinese.md  README.md  ROADMAP.md  pyproject.toml  pyrightconfig.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
docs/: api-reference.md  architecture.md  getting-started.md
examples/: ai_system_recommendation.py  basic_load_calculation.py  polysun_template_generation.py
src/ai_hvac/: __init__.py  cli.py
src/ai_hvac/core/: __init__.py  config.py  exceptions.py
src/ai_hvac/hvac/: __init__.py  load_calc.py  standards.py  system_design.py
src/ai_hvac/llm/: __init__.py  client.py  parsers.py  prompts.py
src/ai_hvac/simulation/: __init__.py  modelica.py  polysun.py
src/ai_hvac/utils/: __init__.py  converters.py  validators.py
tests/: test_cli.py  test_config.py  test_converters.py  test_llm_client.py  test_load_calc.py  test_system_design.py
