[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends.build"

[project]
name = "ai-hvac-design-assistant"
version = "0.1.0"
description = "AI-powered toolkit for HVAC system design, load calculation, and simulation automation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "fyy329"},
]
keywords = [
    "hvac",
    "building-energy",
    "ai",
    "openai",
    "simulation",
    "polysun",
    "modelica",
    "heat-pump",
    "energy-systems",
    "load-calculation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/fyy329/ai-hvac-design-assistant"
Documentation = "https://github.com/fyy329/ai-hvac-design-assistant/tree/main/docs"
Repository = "https://github.com/fyy329/ai-hvac-design-assistant"
Issues = "https://github.com/fyy329/ai-hvac-design-assistant/issues"
Changelog = "https://github.com/fyy329/ai-hvac-design-assistant/blob/main/CHANGELOG.md"

[project.scripts]
ai-hvac = "ai_hvac.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src/ai_hvac --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
